@@ -1,3 +1,10 @@
+2010-07-07  Vladimir Tzankov  <vtzankov@gmail.com>
+
+	* zthread.d (thread_stub): fix double call to set_current_thread.
+	causes problems	with USE_CUSTOM_TLS = 2
+	* spvw.d (main) [USE_CUSTOM_TLS = 2]: remove the thread specific value
+	for signal handling (main) thread
+
 2010-07-05  Yaroslav Kavenchuk  <kavenchuk@jenty.by>
 
 	* makemake.in (CLISP_LIBDIR): use "$(@CLISP_DECOLONIZE@)"
